--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@
 .paragraph_header {
   display: block;
   justify-self: flex-end;
-  max-width: 491px;
+  max-width: 491px; 
   align-self: center;
 }
 
@@ -78,11 +78,13 @@
   font-size: 18px;
   color: #000028;
   line-height: 23px;
+
 }
 
 .title-decor {
   background-color: var(--accent-color);
   color: var(--text-color-decor);
+  font-size: 18px;
 }
 
 .rec {
@@ -195,7 +197,7 @@
 
 .gold_fish_text_article {
   line-height: 23.4px;
-  color: var(--text-color);
+  color: var( --text-color);
   margin-block-start: -8px;
 }
 
@@ -292,195 +294,195 @@ footer {
 }
 
 .text_link:focus-visible {
-  outline: 1px solid currentColor;
+  outline: 1px solid currentColor
 }
 
 @media (width <= 768px) {
+
   .header {
-      height: 100vh;
+    height: 100vh;
   }
 
   .header__theme-menu-list {
-      flex-direction: column;
-      justify-content: end;
-      align-items: end;
-      padding-block-start: 171px;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    padding-block-start: 171px;
   }
 
   .paragraph_header {
-      max-width: 364px;
+    max-width: 364px;
   }
 
   .rec {
-      right: 30px;
+    right: 30px;
   }
 
   .decorated-zone::after {
-      right: 20px;
+    right: 20px;
   }
 
   .decorated-zone::before {
-      left: 20px;
-      bottom: 20px;
+    left: 20px;
+    bottom: 20px;
   }
-
+  
   .main {
-      padding: 20px;
+    padding: 20px;
   }
 
   .why_hard_section {
-      gap: 20px;
-      margin-block-start: 40px;
+    gap: 20px;
+    margin-block-start: 40px;
   }
 
   .concentration_section {
-      padding-block-start: 80px;
-      display: inline-block;
-      justify-content: space-around;
+    padding-block-start: 80px;
+    display: inline-block;
+    justify-content: space-around;
   }
   .section_title {
-      margin-block-end: 20px;
+    margin-block-end: 20px;
   }
 
   .concentration_title {
-      max-width: 150px;
+    max-width: 150px;
   }
 
-  .food,
-  .gadget {
-      margin-block-start: 20px;
+  .food, .gadget {
+    margin-block-start: 20px;
   }
 
   .gold_fish_section {
-      gap: 20px;
-      padding-block-start: 80px;
+    gap: 20px;
+    padding-block-start: 80px;
   }
-
+  
   .mobile_section_title_gold_fish {
-      min-width: 230px;
+    min-width: 230px;
   }
 
   .gold_fish_article {
-      gap: 19px;
+    gap: 19px;
   }
 
   .gallery {
-      padding-block-start: 80px;
+    padding-block-start: 80px;
   }
 
   .gallery_decor {
-      grid-template-columns: auto;
+    grid-template-columns: auto;
   }
-
+  
   .footer {
-      height: 100vh;
+    height: 100vh;
   }
 
   .footer_title {
-      font-size: 120px;
+    font-size: 120px;
   }
 }
 
 @media (width <= 475px) {
   .header__theme-menu-list {
-      padding-block-start: 65px;
+    padding-block-start: 65px;
+  
   }
 
-  .main,
-  .decorated-zone {
-      padding: 10px;
+  .main,.decorated-zone {
+    padding: 10px;
   }
 
   .header_title {
-      padding-block-start: 65px;
-      margin-inline-start: 0;
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      letter-spacing: -3.3px;
+    padding-block-start: 65px;
+    margin-inline-start: 0;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    letter-spacing: -3.3px;
   }
 
   .paragraph_header {
-      padding-block-start: 54px;
+    padding-block-start: 54px;
   }
 
   .decorated-zone::after {
-      right: 10px;
-      top: 10px;
+    right: 10px;
+    top: 10px;
   }
 
   .decorated-zone::before {
-      left: 10px;
-      bottom: 10px;
+    left: 10px;
+    bottom: 10px;
   }
 
   .rec {
-      right: 20px;
-      top: 10px;
+    right: 20px;
+    top: 10px;
   }
 
   .why_hard_section {
-      display: inline;
+    display: inline;
   }
 
   .header {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
   .section_title {
-      max-width: none;
-      padding-block-start: 30px;
+    max-width: none;
+    padding-block-start: 30px;
   }
 
   .concentration_section {
-      padding-block-start: 20px;
+    padding-block-start: 20px;
   }
 
   .gold_fish_section {
-      display: flex;
-      flex-direction: column;
-      padding-block-start: 22px;
-      gap: 0;
+    display: flex;
+    flex-direction: column;
+    padding-block-start: 22px;
+    gap: 0;
   }
 
   .gold_fish_article {
-      padding-block-start: 0;
-      gap: 20px;
-      margin-block-end: 0;
+    padding-block-start: 0;
+    gap: 20px;
+    margin-block-end: 0;
   }
 
   .gold_fish_title {
-      margin-block-start: -2px;
+    margin-block-start: -2px;
   }
 
   .gallery {
-      padding-block-start: 50px;
+    padding-block-start: 50px;
   }
 
   .gallery_decor {
-      display: flex;
-      flex-direction: column;
-      padding-block-start: 10px;
-      gap: 11px;
+    display: flex;
+    flex-direction: column;
+    padding-block-start: 10px;
+    gap: 11px;
   }
 
   .footer {
-      height: 100vh;
-      margin-block-start: 28px;
-      margin-block-end: 25px;
+    height: 100vh;
+    margin-block-start: 28px;
+    margin-block-end: 25px;
   }
 
   .footer_title {
-      font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 
   .decor::after {
-      right: 10px;
-      top: 10px;
+    right: 10px;
+    top: 10px;
   }
 
   .decor::before {
-      left: 10px;
-      bottom: 12px;
+    left: 10px;
+    bottom: 12px;
   }
 }
